--- a/local/experiments.ipynb
+++ b/local/experiments.ipynb
@@ -31,13 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def experiment_2():\n",
     "    hyper_parameters = dict(\n",
-    "        learning_rate=0.1,\n",
+    "        learning_rate=0.01,\n",
     "        batch_size=50,\n",
     "        epochs=10,\n",
     "        kernel_size=(5, 5),\n",
@@ -57,7 +57,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Folder ./model_cache does not exist.\n"
+      "Folder ./model_cache removed successfully.\n"
      ]
     }
    ],
@@ -74,9 +74,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m18s\u001b[0m 5ms/step - accuracy: 0.6959 - loss: 1.0368 - val_accuracy: 0.9160 - val_loss: 0.3729\n",
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step - accuracy: 0.9054 - loss: 0.4283\n",
-      "Test Accuracy: 91.60%\n"
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m15s\u001b[0m 5ms/step - accuracy: 0.7770 - loss: 0.8232 - val_accuracy: 0.9089 - val_loss: 0.4410\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - accuracy: 0.8991 - loss: 0.4957\n"
      ]
     },
     {
@@ -90,6 +89,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Test Accuracy: 90.89%\n",
       "Model and metadata saved in model_cache\n"
      ]
     }
@@ -104,15 +104,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'model_cache/metadata.json'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mpush_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\henry\\OneDrive - Lancaster University\\Documents\\GitHub\\AIEngineUCL\\local\\push_to_server.py:28\u001b[0m, in \u001b[0;36mpush_model\u001b[1;34m()\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mpush_model\u001b[39m():\n\u001b[1;32m---> 28\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mmodel_cache/metadata.json\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m     29\u001b[0m         file_data \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mload(file)\n\u001b[0;32m     30\u001b[0m         time_stamp \u001b[38;5;241m=\u001b[39m file_data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtimestamp\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'model_cache/metadata.json'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Copied './model_cache' to './../server/models/model_20250215-135837'\n"
      ]
     }
    ],
@@ -122,18 +117,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "\u001b[1m1200/1200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 8ms/step - accuracy: 0.1216 - loss: 9.2395 - val_accuracy: 0.1135 - val_loss: 2.3142\n",
+      "Epoch 2/10\n",
+      "\u001b[1m1200/1200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 7ms/step - accuracy: 0.1020 - loss: 2.3111 - val_accuracy: 0.1135 - val_loss: 2.3186\n",
+      "Epoch 3/10\n",
+      "\u001b[1m1200/1200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 8ms/step - accuracy: 0.1072 - loss: 2.3116 - val_accuracy: 0.0974 - val_loss: 2.3157\n",
+      "Epoch 4/10\n",
+      "\u001b[1m1200/1200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 7ms/step - accuracy: 0.1062 - loss: 2.3100 - val_accuracy: 0.1010 - val_loss: 2.3077\n",
+      "Epoch 5/10\n",
+      "\u001b[1m1200/1200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 8ms/step - accuracy: 0.0992 - loss: 2.3129 - val_accuracy: 0.1135 - val_loss: 2.3063\n",
+      "Epoch 6/10\n",
+      "\u001b[1m1200/1200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 7ms/step - accuracy: 0.1025 - loss: 2.3111 - val_accuracy: 0.0958 - val_loss: 2.3137\n",
+      "Epoch 7/10\n",
+      "\u001b[1m1200/1200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 8ms/step - accuracy: 0.1052 - loss: 2.3114 - val_accuracy: 0.1028 - val_loss: 2.3195\n",
+      "Epoch 8/10\n",
+      "\u001b[1m1200/1200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 8ms/step - accuracy: 0.1059 - loss: 2.3112 - val_accuracy: 0.1009 - val_loss: 2.3164\n",
+      "Epoch 9/10\n",
+      "\u001b[1m1200/1200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 7ms/step - accuracy: 0.1012 - loss: 2.3110 - val_accuracy: 0.1010 - val_loss: 2.3081\n",
+      "Epoch 10/10\n",
+      "\u001b[1m1200/1200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 7ms/step - accuracy: 0.1037 - loss: 2.3113 - val_accuracy: 0.1010 - val_loss: 2.3068\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - accuracy: 0.1009 - loss: 2.3068\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 10.10%\n",
+      "Model and metadata saved in model_cache\n"
+     ]
+    }
+   ],
    "source": [
     "experiment_2()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Copied './model_cache' to './../server/models/model_20250215-140011'\n"
+     ]
+    }
+   ],
    "source": [
     "push_model()"
    ]
