extra experiment data

--- a/local/experiments.ipynb
+++ b/local/experiments.ipynb
@@ -16,41 +16,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def experiment_1():\n",
-    "    hyper_parameters = dict(\n",
-    "        learning_rate=0.01,\n",
-    "        batch_size=20,\n",
-    "        epochs=1,\n",
-    "        kernel_size=(5, 5),\n",
-    "        conv_filters=20,\n",
-    "        dense_layer_neurons=20,\n",
-    "        activation=\"swish\",\n",
-    "    )\n",
-    "    train_and_save(hyper_parameters)\n"
+    "hyper_parameters = dict(\n",
+    "    learning_rate=0.1,\n",
+    "    batch_size=5,\n",
+    "    epochs=1,\n",
+    "    kernel_size=(5, 5),\n",
+    "    conv_filters=5,\n",
+    "    dense_layer_neurons=5,\n",
+    "    activation=\"swish\",\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def experiment_2():\n",
-    "    hyper_parameters = dict(\n",
-    "        learning_rate=0.01,\n",
-    "        batch_size=50,\n",
-    "        epochs=10,\n",
-    "        kernel_size=(5, 5),\n",
-    "        conv_filters=20,\n",
-    "        dense_layer_neurons=20,\n",
-    "        activation=\"swish\",\n",
-    "    )\n",
-    "    train_and_save(hyper_parameters)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,84 +46,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m15s\u001b[0m 5ms/step - accuracy: 0.7770 - loss: 0.8232 - val_accuracy: 0.9089 - val_loss: 0.4410\n",
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - accuracy: 0.8991 - loss: 0.4957\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Accuracy: 90.89%\n",
-      "Model and metadata saved in model_cache\n"
-     ]
-    }
-   ],
-   "source": [
-    "experiment_1()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Copied './model_cache' to './../server/models/model_20250215-135837'\n"
-     ]
-    }
-   ],
-   "source": [
-    "push_model()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "\u001b[1m1200/1200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 8ms/step - accuracy: 0.1216 - loss: 9.2395 - val_accuracy: 0.1135 - val_loss: 2.3142\n",
-      "Epoch 2/10\n",
-      "\u001b[1m1200/1200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 7ms/step - accuracy: 0.1020 - loss: 2.3111 - val_accuracy: 0.1135 - val_loss: 2.3186\n",
-      "Epoch 3/10\n",
-      "\u001b[1m1200/1200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 8ms/step - accuracy: 0.1072 - loss: 2.3116 - val_accuracy: 0.0974 - val_loss: 2.3157\n",
-      "Epoch 4/10\n",
-      "\u001b[1m1200/1200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 7ms/step - accuracy: 0.1062 - loss: 2.3100 - val_accuracy: 0.1010 - val_loss: 2.3077\n",
-      "Epoch 5/10\n",
-      "\u001b[1m1200/1200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 8ms/step - accuracy: 0.0992 - loss: 2.3129 - val_accuracy: 0.1135 - val_loss: 2.3063\n",
-      "Epoch 6/10\n",
-      "\u001b[1m1200/1200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 7ms/step - accuracy: 0.1025 - loss: 2.3111 - val_accuracy: 0.0958 - val_loss: 2.3137\n",
-      "Epoch 7/10\n",
-      "\u001b[1m1200/1200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 8ms/step - accuracy: 0.1052 - loss: 2.3114 - val_accuracy: 0.1028 - val_loss: 2.3195\n",
-      "Epoch 8/10\n",
-      "\u001b[1m1200/1200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 8ms/step - accuracy: 0.1059 - loss: 2.3112 - val_accuracy: 0.1009 - val_loss: 2.3164\n",
-      "Epoch 9/10\n",
-      "\u001b[1m1200/1200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 7ms/step - accuracy: 0.1012 - loss: 2.3110 - val_accuracy: 0.1010 - val_loss: 2.3081\n",
-      "Epoch 10/10\n",
-      "\u001b[1m1200/1200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 7ms/step - accuracy: 0.1037 - loss: 2.3113 - val_accuracy: 0.1010 - val_loss: 2.3068\n",
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - accuracy: 0.1009 - loss: 2.3068\n"
+      "\u001b[1m12000/12000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m28s\u001b[0m 2ms/step - accuracy: 0.1040 - loss: 2.6128 - val_accuracy: 0.1010 - val_loss: 2.3309\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - accuracy: 0.1009 - loss: 2.3306\n"
      ]
     },
     {
@@ -159,12 +69,141 @@
      "output_type": "stream",
      "text": [
       "Test Accuracy: 10.10%\n",
-      "Model and metadata saved in model_cache\n"
+      "Model and metadata saved in model_cache\n",
+      "Copied './model_cache' to './../server/models/model_20250215-145654'\n"
      ]
     }
    ],
    "source": [
-    "experiment_2()"
+    "train_and_save(hyper_parameters)\n",
+    "push_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m12000/12000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m29s\u001b[0m 2ms/step - accuracy: 0.1074 - loss: 2.3070 - val_accuracy: 0.1135 - val_loss: 2.3030\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - accuracy: 0.1160 - loss: 2.3028\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 11.35%\n",
+      "Model and metadata saved in model_cache\n",
+      "Copied './model_cache' to './../server/models/model_20250215-145725'\n"
+     ]
+    }
+   ],
+   "source": [
+    "hyper_parameters[\"learning_rate\"] = 0.01\n",
+    "train_and_save(hyper_parameters)\n",
+    "push_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 3ms/step - accuracy: 0.7949 - loss: 0.6682 - val_accuracy: 0.9273 - val_loss: 0.2750\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - accuracy: 0.9156 - loss: 0.3171\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 92.73%\n",
+      "Model and metadata saved in model_cache\n",
+      "Copied './model_cache' to './../server/models/model_20250215-145736'\n"
+     ]
+    }
+   ],
+   "source": [
+    "hyper_parameters[\"batch_size\"] = 20\n",
+    "train_and_save(hyper_parameters)\n",
+    "push_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 3ms/step - accuracy: 0.1084 - loss: 2.3080 - val_accuracy: 0.1009 - val_loss: 2.3038\n",
+      "Epoch 2/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 3ms/step - accuracy: 0.1057 - loss: 2.3031 - val_accuracy: 0.1135 - val_loss: 2.3029\n",
+      "Epoch 3/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 3ms/step - accuracy: 0.1078 - loss: 2.3034 - val_accuracy: 0.1135 - val_loss: 2.3042\n",
+      "Epoch 4/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 3ms/step - accuracy: 0.1104 - loss: 2.3029 - val_accuracy: 0.1135 - val_loss: 2.3033\n",
+      "Epoch 5/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 3ms/step - accuracy: 0.1052 - loss: 2.3031 - val_accuracy: 0.1135 - val_loss: 2.3021\n",
+      "Epoch 6/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 3ms/step - accuracy: 0.1121 - loss: 2.3027 - val_accuracy: 0.1135 - val_loss: 2.3020\n",
+      "Epoch 7/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 3ms/step - accuracy: 0.1086 - loss: 2.3028 - val_accuracy: 0.1135 - val_loss: 2.3017\n",
+      "Epoch 8/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 3ms/step - accuracy: 0.1097 - loss: 2.3027 - val_accuracy: 0.1135 - val_loss: 2.3021\n",
+      "Epoch 9/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 3ms/step - accuracy: 0.1065 - loss: 2.3032 - val_accuracy: 0.1135 - val_loss: 2.3013\n",
+      "Epoch 10/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 3ms/step - accuracy: 0.1074 - loss: 2.3028 - val_accuracy: 0.1135 - val_loss: 2.3022\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - accuracy: 0.1160 - loss: 2.3027\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 11.35%\n",
+      "Model and metadata saved in model_cache\n",
+      "Copied './model_cache' to './../server/models/model_20250215-145910'\n"
+     ]
+    }
+   ],
+   "source": [
+    "hyper_parameters[\"epochs\"] = 10\n",
+    "train_and_save(hyper_parameters)\n",
+    "push_model()"
    ]
   },
   {
@@ -176,12 +215,131 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Copied './model_cache' to './../server/models/model_20250215-140011'\n"
+      "Epoch 1/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m14s\u001b[0m 4ms/step - accuracy: 0.1055 - loss: 2.3168 - val_accuracy: 0.1135 - val_loss: 2.3024\n",
+      "Epoch 2/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m13s\u001b[0m 4ms/step - accuracy: 0.1091 - loss: 2.3028 - val_accuracy: 0.1135 - val_loss: 2.3010\n",
+      "Epoch 3/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m14s\u001b[0m 5ms/step - accuracy: 0.1110 - loss: 2.3026 - val_accuracy: 0.1135 - val_loss: 2.3015\n",
+      "Epoch 4/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 4ms/step - accuracy: 0.1094 - loss: 2.3029 - val_accuracy: 0.1010 - val_loss: 2.3030\n",
+      "Epoch 5/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 4ms/step - accuracy: 0.1059 - loss: 2.3030 - val_accuracy: 0.1135 - val_loss: 2.3023\n",
+      "Epoch 6/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 4ms/step - accuracy: 0.1088 - loss: 2.3029 - val_accuracy: 0.1010 - val_loss: 2.3021\n",
+      "Epoch 7/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 4ms/step - accuracy: 0.1093 - loss: 2.3027 - val_accuracy: 0.1028 - val_loss: 2.3044\n",
+      "Epoch 8/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 4ms/step - accuracy: 0.1071 - loss: 2.3030 - val_accuracy: 0.1135 - val_loss: 2.3018\n",
+      "Epoch 9/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 4ms/step - accuracy: 0.1081 - loss: 2.3031 - val_accuracy: 0.1135 - val_loss: 2.3024\n",
+      "Epoch 10/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 4ms/step - accuracy: 0.1103 - loss: 2.3026 - val_accuracy: 0.1010 - val_loss: 2.3026\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step - accuracy: 0.1009 - loss: 2.3016\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 10.10%\n",
+      "Model and metadata saved in model_cache\n",
+      "Copied './model_cache' to './../server/models/model_20250215-150115'\n"
      ]
     }
    ],
    "source": [
+    "hyper_parameters[\"conv_filters\"] = 20\n",
+    "train_and_save(hyper_parameters)\n",
     "push_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m17s\u001b[0m 5ms/step - accuracy: 0.7891 - loss: 0.7387 - val_accuracy: 0.8738 - val_loss: 0.4361\n",
+      "Epoch 2/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m16s\u001b[0m 5ms/step - accuracy: 0.9039 - loss: 0.4365 - val_accuracy: 0.9437 - val_loss: 0.2850\n",
+      "Epoch 3/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m14s\u001b[0m 5ms/step - accuracy: 0.9438 - loss: 0.2625 - val_accuracy: 0.9511 - val_loss: 0.2519\n",
+      "Epoch 4/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m14s\u001b[0m 5ms/step - accuracy: 0.9516 - loss: 0.2251 - val_accuracy: 0.9581 - val_loss: 0.2462\n",
+      "Epoch 5/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m15s\u001b[0m 5ms/step - accuracy: 0.9582 - loss: 0.2006 - val_accuracy: 0.9532 - val_loss: 0.2091\n",
+      "Epoch 6/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m15s\u001b[0m 5ms/step - accuracy: 0.9594 - loss: 0.1937 - val_accuracy: 0.9597 - val_loss: 0.2521\n",
+      "Epoch 7/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m14s\u001b[0m 5ms/step - accuracy: 0.9655 - loss: 0.1651 - val_accuracy: 0.9504 - val_loss: 0.3228\n",
+      "Epoch 8/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m14s\u001b[0m 5ms/step - accuracy: 0.9635 - loss: 0.1768 - val_accuracy: 0.9633 - val_loss: 0.1913\n",
+      "Epoch 9/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m14s\u001b[0m 5ms/step - accuracy: 0.9655 - loss: 0.1570 - val_accuracy: 0.9545 - val_loss: 0.1939\n",
+      "Epoch 10/10\n",
+      "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m15s\u001b[0m 5ms/step - accuracy: 0.9679 - loss: 0.1497 - val_accuracy: 0.9599 - val_loss: 0.2966\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step - accuracy: 0.9491 - loss: 0.3744\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 95.99%\n",
+      "Model and metadata saved in model_cache\n",
+      "Copied './model_cache' to './../server/models/model_20250215-150346'\n"
+     ]
+    }
+   ],
+   "source": [
+    "hyper_parameters[\"dense_layer_neurons\"] = 20\n",
+    "train_and_save(hyper_parameters)\n",
+    "push_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'learning_rate': 0.01,\n",
+       " 'batch_size': 20,\n",
+       " 'epochs': 10,\n",
+       " 'kernel_size': (5, 5),\n",
+       " 'conv_filters': 20,\n",
+       " 'dense_layer_neurons': 20,\n",
+       " 'activation': 'swish'}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hyper_parameters"
    ]
   }
  ],
